--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,3 +1,12 @@
-<p>cursos component </p>
+<p>
+  Lista de cursos o portal {{ nomePortal }}
+</p>
 
 <app-cursos-detalhe></app-cursos-detalhe>
+
+<ul>
+  <li *ngFor='let curso of cursos'>
+    {{ curso }}
+  </li>
+
+</ul>
